changed grouping concept for visit diagnosis. fetched list of visit medications

--- a/omod/src/main/webapp/resources/htmlforms/otherMedications.html
+++ b/omod/src/main/webapp/resources/htmlforms/otherMedications.html
@@ -39,6 +39,11 @@
             });
         });
 	</script>
+	<style>
+		.alignLeft {
+			text-align: left;
+		}
+	</style>
 	<div class="ke-form-header">
 		<table width="100%" id="table">
 			<tr>
@@ -51,12 +56,12 @@
 	<div class="ke-form-content">
 		<table width="100%" id="tbl-medication">
 			<tr>
-				<th>Drug Prescribed</th>
-				<th>Dose Prescribed</th>
-				<th>Dispensed Units</th>
-				<th>Frequency Prescribed</th>
-				<th>Duration</th>
-				<th>Duration Units</th>
+				<th class="alignLeft">Drug Prescribed</th>
+				<th class="alignLeft">Dose Prescribed</th>
+				<th class="alignLeft">Dispensed Units</th>
+				<th class="alignLeft">Frequency Prescribed</th>
+				<th class="alignLeft">Duration</th>
+				<th class="alignLeft">Duration Units</th>
 			</tr>
 			<repeat>
 				<template>
