HIVGreenCard beforeSubmit bug fix

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
@@ -190,7 +190,7 @@
             <legend>Consent</legend>
             <table id="tbl-consent">
                 <tr>
-                    <td>Patient has informed consent &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <td>Has patient consented? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs class="consent" conceptId="1710AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              style="yes_no" />
                     </td>
@@ -217,7 +217,7 @@
                         <obs class="hts-strategy"
                              conceptId="160540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerConceptIds="164163AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163121AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159938AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159939AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerLabels="Patient Initiated Testing(PITC),Non Patient Initiated Testing,Integrated VCT Center,Stand Alone VCT Center,Home Based Testing,Mobile Outreach HTS,Other"
+                             answerLabels="Provider Initiated Testing(PITC),Non Provider Initiated Testing,Integrated VCT Center,Stand Alone VCT Center,Home Based Testing,Mobile Outreach HTS,Other"
                         />
                     </td>
                 </tr>
