--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -151,11 +151,15 @@ Green Card follow-up visit form
             }
         }
         var complaintSelected = function() {
-
             var val = jq(this).val();
+            var complaint = jq('.complaint');
+            var complaintDuration = jq('.complaint-time input').val('');
+            var complaintDate = jq('.complaint-date input').val('');
             if (val == 1066){
                 jq("#tbl-complaints-today").hide();
-
+                clearHiddenSections(complaint);
+                clearHiddenSections(complaintDuration);
+                clearHiddenSections(complaintDate);
             }else {
                 jq("#tbl-complaints-today").show();
             }
@@ -186,8 +190,18 @@ Green Card follow-up visit form
         }
         var knownAllergiesSelected = function() {
             var val = jq(this).val();
+            var allergy = jq('.allergen');
+            var reaction = jq('.reaction');
+            var severity = jq('.severity');
+            var date = jq('.allergy-date input').val('');
+            var action = jq('.allergy-action');
             if (val == 1066){
                 jq("#tbl-known-allergies").hide();
+                clearHiddenSections(allergy);
+                clearHiddenSections(reaction);
+                clearHiddenSections(severity);
+                clearHiddenSections(date);
+                clearHiddenSections(action);
 
             }else {
                 jq("#tbl-known-allergies").show();
@@ -214,11 +228,13 @@ Green Card follow-up visit form
 
         var screenedStiSelected = function() {
             var val = jq(this).val();
+            var partnerNotification = jq("#tbl-partner-notification");
             if (val == 703){
                 jq("#tbl-partner-notification").show();
 
             }else {
                 jq("#tbl-partner-notification").hide();
+                clearHiddenSections(partnerNotification);
             }
         }
         var onAntiTbDrugs = function(){
@@ -339,12 +355,13 @@ Green Card follow-up visit form
 
         var populationTypeSelected = function () {
             var val = jq(this).val();
+            var keypop = jq('#key-population');
             if (val == 1066 ){
                 jq("#key-population").show();
-
-            }else{
+            }
+            if(val == 1065){
                 jq("#key-population").hide();
-
+                clearHiddenSections(keypop);
             }
         }
         //Resulting TB status for Ordered test
@@ -994,33 +1011,7 @@ Green Card follow-up visit form
                     this.checked = false;
                 });
             }
-
-            clearHiddenSections = function(parentObj) {
-
-                parentObj.find('input[type=radio]').each(function() {
-
-                    this.checked = false;
-
-                });
-
-                parentObj.find('input[type=checkbox]').each(function() {
-
-                    this.checked = false;
-
-                });
-                parentObj.find('input[type=text]').each(function() {
-
-                    this.val("");
-
-                });
-                parentObj.find('select').each(function() {
-
-                    this.selectedIndex =0;
-
-                });
-            }
-
-            screeningRadios.change(function() {
+          screeningRadios.change(function() {
 
                 showHideTabs();
 
@@ -1043,6 +1034,21 @@ Green Card follow-up visit form
 
         });
         //End on ready
+        //Clear hidden sections
+        clearHiddenSections = function(parentObj) {
+            parentObj.find('input[type=radio]').each(function() {
+                this.checked = false;
+            });
+            parentObj.find('input[type=checkbox]').each(function() {
+                this.checked = false;
+            });
+            parentObj.find('input[type=text]').each(function() {
+                this.val("");
+            });
+            parentObj.find('select').each(function() {
+                this.selectedIndex =0;
+            });
+        }
         //Before submit
         beforeSubmit.push(function() {
 
@@ -1146,9 +1152,9 @@ Green Card follow-up visit form
         <fieldset>
             <legend>Visit Type</legend>
             <!--pw greencard additions visit type and appointment type -->
-            <table cellspacing="5">
+            <table cellspacing="15">
                 <tr>
-                    <th>Scheduled/Unscheduled</th>
+                    <th>Visit scheduled?</th>
                     <th align="left">Visit by</th>
                 </tr>
                 <tr>
@@ -1840,7 +1846,7 @@ Green Card follow-up visit form
                                     <template>
                                         <obsgroup groupingConceptId="121689AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
                                             <tr>
-                                                <td><obs conceptId="160643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                                <td><obs class="allergen" conceptId="160643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                                          answerConceptIds="162543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,72609AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162544AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162545AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162171AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162546AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162547AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162172AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
                                                                             162176AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162548AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162177AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162542AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162536AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
                                                                               	162541AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -1851,16 +1857,16 @@ Green Card follow-up visit form
                                                 />
 
                                                 </td>
-                                                <td><obs conceptId="159935AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                                <td><obs class="reaction" conceptId="159935AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                                          answerConceptIds="1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,121629AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,148888AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,148787AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,120148AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,108AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,143264AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142412AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,118773AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,140238AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,140039AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,139581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,139084AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159098AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
                                                                             111061AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,117399AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,879AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,121677AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159347AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,121AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,512AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                                          answerLabels="Unknown,Anaemia,Anaphylaxis,Angioedema,Arrhythmia,Bronchospasm,Cough,Diarrhea,Dystonia,Fever,Flushing,GI upset,Headache,Hepatotoxicity,Hives,Hypertension,Itching,Mental status change,Musculoskeletal pain,Myalgia,Rash,Other"
                                                          style="dropdown"
                                                 /></td>
-                                                <td><obs conceptId="162760AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
-                                                <td><obs conceptId="160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
+                                                <td><obs class="severity" conceptId="162760AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
+                                                <td><obs class="allergy-date" conceptId="160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
                                                 <td>
-                                                    <obs conceptId="1255AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                                    <obs class="allergy-action" conceptId="1255AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                                          answerConceptIds="1257AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1259AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1258AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1260AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                                          answerLabels="CONTINUE REGIMEN,CHANGE REGIMEN,DOSING CHANGE,CHANGE FORMULATION,NONE,STOP"
                                                          style="dropdown"
@@ -2686,9 +2692,9 @@ Green Card follow-up visit form
             <table>
                 <tr>
                     <td>Return Visit Date:</td>
-                    <td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" />
+                    <td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" required="true" />
                         Reason*:
-                        <obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
                              answerConceptIds="160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1283AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159382AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160521AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerLabels="Follow up,Lab tests,Counseling,Pharmacy Refill,Other,"
                              style="dropdowm"  />
